--- a/app.json
+++ b/app.json
@@ -2,11 +2,13 @@
   "name": "auto-twitter-dm",
   "description": "Script to automate direct message for new followers using APS schedular",
   "image": "heroku/python",
-  "repository": "https://github.com/heroku/python-getting-started",
   "keywords": ["python", "twitter"],
   "buildpacks": [
     {
       "url": "heroku/python"
     }
-  ]
+  ],
+  "scripts": {
+    "postdeploy": "heroku ps:scale clock=1"
+  }
 }
